# lj-md-sim

./: CMakeLists.txt  LICENSE  README.md  batch_run.sh  verify_build.sh
include/: benchmark.hpp  lj_sim.cuh  particle_generator.hpp  validation.hpp
src/: benchmark.cpp  lj_sim.cu  main.cpp  particle_generator.cpp
